# Pulmonary_Anomaly_Detection

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt
app/: __init__.py
app/api/: __init__.py  routes.py  validators.py
app/services/: __init__.py  image_processor.py  inference.py
app/static/css/: main.css
app/static/js/: auth.js  batch.js  dashboard.js  result.js  upload.js  utils.js
app/templates/: base.html  batch.html  dashboard.html  error.html  index.html  login.html  result.html  signup.html
outputs/: config_snapshot.json  metrics.csv  thresholds.json
outputs/6_Block_AE_Outputs/: config_snapshot.json  metrics.csv  thresholds.json
outputs/Small_CAE_Outputs/: config_snapshot.json  metrics.csv  thresholds.json
outputs/without_residual_outputs/: config_snapshot.json  metrics.csv  thresholds.json
scripts/: download_data.py  evaluate.py  run_app.py  train.py  train_egx.py
src/: __init__.py
src/data/: __init__.py  dataloader.py  dataset.py  transforms.py
src/evaluation/: __init__.py  anomaly_scorer.py  metrics.py  visualiser.py
src/model/: __init__.py  autoencoder.py  decoder.py  encoder.py
src/training/: __init__.py  callbacks.py  egx_trainer.py  loss.py  trainer.py
src/utils/: __init__.py  device.py  logger.py  seed.py
